# git-stats

./: Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs  main.rs  options.rs  users.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
