[package]
description = "A command line tool to generate statistics from git repositories"
edition     = "2024"
license     = "MIT"
name        = "git-stats"
version     = "0.1.0"

[dependencies]
anyhow          = "1"
chrono          = { version = "0.4", features = ["serde"] }
clap            = { version = "4.5", features = ["derive"] }
crossterm       = "0.28"
git2            = "0.20"
indicatif       = "0.17"
itertools       = "0.14"
ratatui         = "0.29"
tui-widget-list = "0.13"
uuid            = { version = "1.16", features = ["serde", "v4"] }
